# termographics

./: .gitignore  CMakeLists.txt
include/termographics/: camera.hpp  config.hpp  vector3i.hpp
src/: main.cpp
test/: CMakeLists.txt  camera_test.cpp
